# axevpn_flutter

./: .gitignore  16KB_VERIFICATION.md  CLEANUP_GUIDE.md  CONTRIBUTING.md  GIT_DEPLOYMENT_GUIDE.md  GIT_QUICK_START.md  INDEX.md  MIGRATION_SUMMARY.md  README.md  VERIFICATION.md  pubspec.yaml
android/: CMakeLists_16KB.txt  build.gradle  build_libopvpnutil.bat  consumer-rules.pro  gradle.properties  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  opvpnutil.c
android/src/main/java/com/axevpn/flutter/openvpn/: AxeVPNFlutterPlugin.java
example/lib/: main.dart
ios/: openvpn_flutter.podspec
ios/Classes/: VPNManager.swift
lib/: openvpn_flutter.dart
lib/src/: vpn_engine.dart
